# clion-vcpkg-config

./: .gitignore  CMakeLists.txt  README.md  learn.cpp
